--- a/smarttorino_theme_s/.project
+++ b/smarttorino_theme_s/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>smarttorino_theme_s</name>
+	<name>smarttorino_theme</name>
 	<comment></comment>
 	<projects>
 	</projects>
