--- a/smarttorino_theme_s/pom.xml
+++ b/smarttorino_theme_s/pom.xml
@@ -3,10 +3,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>it.smartcommunitylab.smarttorinotheme_s</groupId>
-	<artifactId>smarttorino_theme_s</artifactId>
+	<groupId>it.smartcommunitylab.smarttorinotheme</groupId>
+	<artifactId>smarttorino_theme</artifactId>
 	<packaging>war</packaging>
-	<name>SmartTorino S Theme</name>
+	<name>SmartTorino Theme</name>
 	<version>0.1</version>
 	<build>
 		<plugins>
