JSON map for tipologia, destinatari, tipoInnovazione.

--- a/innoboard-portlet/src/main/resources/conversion/articleEntries.properties
+++ b/innoboard-portlet/src/main/resources/conversion/articleEntries.properties
@@ -13,9 +13,9 @@ statoAvanzamento=text-custom
 sostenibilitaSociale=text
 sostenibilitaEconomica=text
 sostenibilitaAmbientale=text
-tipologia=text-list
-destinatari=text-list
-tipoInnovazione=text-list
+tipologia=text-map
+destinatari=text-map
+tipoInnovazione=text-map
 ambitoPrimario=text-map
 ambitoSecondario=text-map
 finanziamentoPubblico=boolean-custom
