--- a/tsc_theme/src/main/webapp/WEB-INF/liferay-plugin-package.properties
+++ b/tsc_theme/src/main/webapp/WEB-INF/liferay-plugin-package.properties
@@ -8,7 +8,7 @@ page-url=http://www.liferay.com
 author=Liferay, Inc.
 licenses=LGPL
 name=
-required-deployment-contexts=resources-importer-web
-resources-importer-developer-mode-enabled=true
-resources-importer-target-class-name=com.liferay.portal.model.Group
-resources-importer-target-value=Liferay Torino
+#required-deployment-contexts=resources-importer-web
+#resources-importer-developer-mode-enabled=true
+#resources-importer-target-class-name=com.liferay.portal.model.Group
+#resources-importer-target-value=Liferay Torino
