--- a/tsc_theme/pom.xml
+++ b/tsc_theme/pom.xml
@@ -25,14 +25,10 @@
 					</execution>
 				</executions>
 				<configuration>
-					<!-- <autoDeployDir>${liferay.auto.deploy.dir}</autoDeployDir> -->
-					<!-- <appServerDeployDir>${liferay.app.server.deploy.dir}</appServerDeployDir> -->
-					<!-- <appServerLibGlobalDir>${liferay.app.server.lib.global.dir}</appServerLibGlobalDir> -->
-					<!-- <appServerPortalDir>${liferay.app.server.portal.dir}</appServerPortalDir> -->
-					<autoDeployDir>/home/oscar/dev/liferay-torino/deploy</autoDeployDir>
-					<appServerDeployDir>/home/oscar/dev/liferay-torino/tomcat-7.0.42/webapps</appServerDeployDir>
-					<appServerLibGlobalDir>/home/oscar/dev/liferay-torino/tomcat-7.0.42/lib/ext</appServerLibGlobalDir>
-					<appServerPortalDir>/home/oscar/dev/liferay-torino/tomcat-7.0.42/webapps/ROOT</appServerPortalDir>
+					<autoDeployDir>${liferay.auto.deploy.dir}</autoDeployDir>
+					<appServerDeployDir>${liferay.app.server.deploy.dir}</appServerDeployDir>
+					<appServerLibGlobalDir>${liferay.app.server.lib.global.dir}</appServerLibGlobalDir>
+					<appServerPortalDir>${liferay.app.server.portal.dir}</appServerPortalDir>
 					<liferayVersion>${liferay.version}</liferayVersion>
 					<parentTheme>${liferay.theme.parent}</parentTheme>
 					<pluginType>theme</pluginType>
